fix:graph/desc collapse as well alignment issues

--- a/src/pages/ContentScripts/index.scss
+++ b/src/pages/ContentScripts/index.scss
@@ -21,11 +21,34 @@
   border-bottom: 0;
   border-radius: 6px;
 }
+.color-text-secondary {
+  margin-left: 35px;
+  margin-right: 35px;
+  margin-top: 10px;
+}
+@media screen and (max-width: 1120px) {
+  .graph-container {
+    width: 100% !important;
+  }
+  .description-container {
+    width: 100% !important;
+  }
+  .color-text-secondary {
+    margin-left: 5px;
+    margin-top: 5px;
+  }
+}
 
 .hypertrons-crx-title-extra {
   float: right;
   margin-right: 10px;
   text-align: right;
+}
+
+@media screen and (max-width: 670px) {
+  .developer-tab {
+    float: none;
+  }
 }
 
 .verticalStackItemStyle {
